--- a/you_account.html
+++ b/you_account.html
@@ -1,7 +1,7 @@
-!doctype html>
+<!doctype html>
 <html lang="en">
   <head>
-    <!-- Required meta tags --><
+    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- fevicon -->
@@ -17,7 +17,7 @@
      <!-- script css -->
      <link rel="stylesheet" href="/css/custom.css">
 
-    <title>Amazon Website</title>
+    <title>Your Account</title>
   </head>
   <body>
     <!-- navbar starts -->
@@ -125,6 +125,50 @@
       </div>
     </nav>
     <!-- navbar ended -->
+
+    <!-- Your account starts here -->
+     <div class="container mt-5">
+        <h1>Your Account</h1>
+        <!-- Account pannel start -->
+         <div class="row">
+            <div class="col-md-4">
+                <a href="#" class="btn w-100">
+                    <div class="card">
+                        <div class="card-body">
+                            <i class="fa-solid fa-2x fa-bag-shopping"></i>
+                            <span class="h4">Your Orders</span>
+                        </div>
+                        <small class="text-muted">Track, return buy things again.</small>
+                      </div>
+                </a>
+            </div>
+            <div class="col-md-4">
+                <a href="#" class="btn w-100">
+                    <div class="card">
+                        <div class="card-body">
+                            <i class="fa-solid fa-2x fa-location-dot"></i>
+                            <span class="h4">Your Addresses</span>
+                        </div>
+                        <small class="text-muted">Edit your addresses for orders.</small>
+                      </div>
+                </a>
+            </div>
+            <div class="col-md-4">
+                <a href="#" class="btn w-100">
+                    <div class="card">
+                        <div class="card-body">
+                            <i class="fa-solid fa-2x fa-bag-shopping"></i>
+                            <span class="h4">Your Orders</span>
+                        </div>
+                        <small class="text-muted">Track, return buy things again.</small>
+                      </div>
+                </a>
+            </div>
+         </div>
+
+
+        <!-- acccont pannel end -->
+     </div>
 
 
 
