--- a/you_account.html
+++ b/you_account.html
@@ -146,10 +146,10 @@
                 <a href="#" class="btn w-100">
                     <div class="card">
                         <div class="card-body">
-                            <i class="fa-solid fa-2x fa-location-dot"></i>
-                            <span class="h4">Your Addresses</span>
+                          <i class="fa-solid fa-2x fa-key"></i>
+                            <span class="h4">Password change</span>
                         </div>
-                        <small class="text-muted">Edit your addresses for orders.</small>
+                        <small class="text-muted">Change your password.</small>
                       </div>
                 </a>
             </div>
@@ -157,10 +157,10 @@
                 <a href="#" class="btn w-100">
                     <div class="card">
                         <div class="card-body">
-                            <i class="fa-solid fa-2x fa-bag-shopping"></i>
-                            <span class="h4">Your Orders</span>
+                          <i class="fa-solid fa-2x fa-map-location-dot"></i>
+                            <span class="h4">Your Addresses</span>
                         </div>
-                        <small class="text-muted">Track, return buy things again.</small>
+                        <small class="text-muted">Edit addresses for orders.</small>
                       </div>
                 </a>
             </div>
