--- a/add_new_address.html
+++ b/add_new_address.html
@@ -17,7 +17,7 @@
      <!-- script css -->
      <link rel="stylesheet" href="/css/custom.css">
 
-    <title>Your Account</title>
+    <title>Amazon Website</title>
   </head>
   <body>
     <!-- navbar starts -->
@@ -126,50 +126,147 @@
     </nav>
     <!-- navbar ended -->
 
-    <!-- Your account starts here -->
-     <div class="container mt-5">
-        <h1>Your Account</h1>
-        <!-- Account pannel start -->
-         <div class="row">
-            <div class="col-md-4">
-                <a href="you_orders.html" class="btn w-100">
-                    <div class="card">
-                        <div class="card-body">
-                            <i class="fa-solid fa-2x fa-bag-shopping"></i>
-                            <span class="h4">Your Orders</span>
-                        </div>
-                        <small class="text-muted">Track, return buy things again.</small>
-                      </div>
-                </a>
-            </div>
-            <div class="col-md-4">
-                <a href="add_new_address.html" class="btn w-100">
-                    <div class="card">
-                        <div class="card-body">
-                          <i class="fa-solid fa-2x fa-key"></i>
-                            <span class="h4">Password change</span>
-                        </div>
-                        <small class="text-muted">Change your password.</small>
-                      </div>
-                </a>
-            </div>
-            <div class="col-md-4">
-                <a href="your_addreses.html" class="btn w-100">
-                    <div class="card">
-                        <div class="card-body">
-                          <i class="fa-solid fa-2x fa-map-location-dot"></i>
-                            <span class="h4">Your Addresses</span>
-                        </div>
-                        <small class="text-muted">Edit addresses for orders.</small>
-                      </div>
-                </a>
-            </div>
-         </div>
+<!-- new address form start -->
+ <div class="container w-50 mt-5 mb-5" >
+    <!-- URL breadcrumb starts -->
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb bg-transparent ml-n2">
+          <li class="breadcrumb-item"><a href="you_account.html">Your Account</a></li>
+          <li class="breadcrumb-item"><a href="your_addreses.html">Your addresses</a></li>
+          <li class="breadcrumb-item active text-danger" aria-current="page">New address</li>
+          
+        </ol>
+      </nav>
+      <!-- breadcrump ended -->
+       <h3 class="font-weight-bold">Add a new address</h3>
+       <p class="font-weight-bold">Or pick up your packages at your convenience from our self-service locations.</p>
 
+       <!-- new address form start -->
+        <form class="w-85 mx-auto font-weight-bold needs-validation" autocomplete="off"  method="post"novalidate></form>
+          <div class="form-group">
+          <label for="Country">Country/Region</label>
+    <select class="form-control" id="Country" name="Country" required>
+      <option value="0">India</option>
+      <option value="1">Pakistan</option>
+      <option value="2">Nepal</option>
+      <option value="3">Bangladesh</option>
+      <option value="4">America</option>
+    </select>
+    <div class="valid-feedback">
+      <i class="fa-regular  text-success fa-thumbs-up"></i> Ok
+    </div>
+    <div class="invalid-feedback">
+      <i class="fa-solid text-danger fa-circle-exclamation"></i> Some error in email.
+    </div>
+    </div>
 
-        <!-- acccont pannel end -->
-     </div>
-
+    <div class="form-group">
+      <label for="userName">Full Name</label>
+      <input type="text" class="form-control" id="userName" name="userName" required>
+      <div class="valid-feedback">
+        <i class="fa-regular  text-success fa-thumbs-up"></i> Ok
+      </div>
+      <div class="invalid-feedback">
+        <i class="fa-solid text-danger fa-circle-exclamation"></i> Some error in email.
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="mobileNumber">Mobile Number</label>
+      <input type="number" class="form-control" id="mobileNumber" name="mobileNumber" placeholder="10 digit mobile number without prefixes" required>
+      <small>maybe used to assist delivery</small>
+      <div class="valid-feedback">
+        <i class="fa-regular  text-success fa-thumbs-up"></i> Ok
+      </div>
+      <div class="invalid-feedback">
+        <i class="fa-solid text-danger fa-circle-exclamation"></i> Some error in email.
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="pinCode">PIN Code</label>
+      <input type="number" class="form-control" id="pinCode" name="pinCode" placeholder="6-digit [0-9] PIN code" required>
+      <div class="valid-feedback">
+        <i class="fa-regular  text-success fa-thumbs-up"></i> Ok
+      </div>
+      <div class="invalid-feedback">
+        <i class="fa-solid text-danger fa-circle-exclamation"></i> Some error in email.
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="houseNumber">Flat, House no., Building, Company, Apartment</label>
+      <input type="text" class="form-control" id="houseNumber" name="houseNumber" required>
+      <div class="valid-feedback">
+        <i class="fa-regular  text-success fa-thumbs-up"></i> Ok
+      </div>
+      <div class="invalid-feedback">
+        <i class="fa-solid text-danger fa-circle-exclamation"></i> Some error in email.
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="area">Area, Colony, Street, Sector, Village</label>
+      <input type="text" class="form-control" id="area" name="area">
+      <div class="valid-feedback">
+        <i class="fa-regular  text-success fa-thumbs-up"></i> Ok
+      </div>
+      <div class="invalid-feedback">
+        <i class="fa-solid text-danger fa-circle-exclamation"></i> Some error in email.
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="landmark">Landmark</label>
+      <input type="text" class="form-control" id="landmark" name="landmark" placeholder="Eg. Near AIIMS flyover,Behind Regal Cinema."required>
+      <div class="valid-feedback">
+        <i class="fa-regular  text-success fa-thumbs-up"></i> Ok
+      </div>
+      <div class="invalid-feedback">
+        <i class="fa-solid text-danger fa-circle-exclamation"></i> Some error in email.
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="city">Town/city</label>
+      <input type="text" class="form-control" id="city" name="city" required>
+      <div class="valid-feedback">
+        <i class="fa-regular  text-success fa-thumbs-up"></i> Ok
+      </div>
+      <div class="invalid-feedback">
+        <i class="fa-solid text-danger fa-circle-exclamation"></i> Some error in email.
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="state">State/ Province/ Region</label>
+      <select class="form-control" id="Country" name="Country" required>
+        <option value="0">India</option>
+        <option value="1">Pakistan</option>
+        <option value="2">Nepal</option>
+        <option value="3">Bangladesh</option>
+        <option value="4">America</option>
+      </select>
+      <div class="valid-feedback">
+        <i class="fa-regular  text-success fa-thumbs-up"></i> Ok
+      </div>
+      <div class="invalid-feedback">
+        <i class="fa-solid text-danger fa-circle-exclamation"></i> Some error in email.
+      </div>
+    </div>
+    <h5>Add delivery instructions.</h5>
+      <p>Prefernces are used to plan your delivery. However, shipments can sometimes arrive early or  later than planned
+   </p>
+   <div class="form-group">
+    <label for="addressType">Address Type</label>
+    <select class="form-control" id="addressType" name="addressType">
+      <option value="0">Select an address Type</option>
+      <option value="1">Home (7am- 9pm delivery )</option>
+      <option value="2">Office/Commercial (10AM- 6PM delivery)</option>
+    </select>
+    <div class="valid-feedback">
+      <i class="fa-regular  text-success fa-thumbs-up"></i> Ok
+    </div>
+    <div class="invalid-feedback">
+      <i class="fa-solid text-danger fa-circle-exclamation"></i> Some error in email.
+    </div>
+  </div>
+  <button type="submit" class="btn btn-warning mt-2 mb-2 shadow-rounded">add Address</button>
+        </form>
+ </div>
 
 
     <!-- Optional JavaScript; choose one of the two! -->
@@ -183,5 +280,27 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     -->
     <script src="/js/custom.js"></script>
+    <script>
+      // Example starter JavaScript for disabling form submissions if there are invalid fields
+  (function () {
+    'use strict'
+  
+    // Fetch all the forms we want to apply custom Bootstrap validation styles to
+    var forms = document.querySelectorAll('.needs-validation')
+  
+    // Loop over them and prevent submission
+    Array.prototype.slice.call(forms)
+      .forEach(function (form) {
+        form.addEventListener('submit', function (event) {
+          if (!form.checkValidity()) {
+            event.preventDefault()
+            event.stopPropagation()
+          }
+  
+          form.classList.add('was-validated')
+        }, false)
+      })
+  })()
+  </script>
   </body>
 </html>
