--- a/your_addreses.html
+++ b/your_addreses.html
@@ -17,7 +17,7 @@
      <!-- script css -->
      <link rel="stylesheet" href="/css/custom.css">
 
-    <title>Your Account</title>
+    <title>Amazon Website</title>
   </head>
   <body>
     <!-- navbar starts -->
@@ -126,49 +126,69 @@
     </nav>
     <!-- navbar ended -->
 
-    <!-- Your account starts here -->
-     <div class="container mt-5">
-        <h1>Your Account</h1>
-        <!-- Account pannel start -->
-         <div class="row">
-            <div class="col-md-4">
-                <a href="you_orders.html" class="btn w-100">
-                    <div class="card">
-                        <div class="card-body">
-                            <i class="fa-solid fa-2x fa-bag-shopping"></i>
-                            <span class="h4">Your Orders</span>
+    <div class="container">
+        <!-- breadcramp start -->
+    <div class="container">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb bg-transparent ml-n2">
+              <li class="breadcrumb-item"><a href="you_account.html">Your Account</a></li>
+              <li class="breadcrumb-item active text-danger" aria-current="page">Your Addresses</li>
+            </ol>
+          </nav>
+     <!-- breadcramp end -->
+      <h3>Your Addresses</h3>
+      <!-- Address cart -->
+       <div class="row">
+        <div class="col-md-4 my-md-0 my-2">
+            <a href="add_new_address.html" class="btn bg-transparent m-0 p-0">
+                <div class="card"style= " width: 320px; height: 250px; border:2px dashed #c7c7c7;">
+                    <div class="card-body mt-5">
+                        <i class="fa-solid fa-plus fa-3x mt-5" style="color: #c7c7c7;"></i>
+                      <h5 class="card-title">Add Address</h5>
+                    </div>
+                  </div>
+            </a>
+        </div>
+        <div class="col-md-4 my-md-0 my-2">
+                <div class="card">
+                        <div class="card-header bg-transparent">
+                            <p class="text-muted p-0 m-0">Default: <i class="fa-brands  fa-amazon"></i></p>   
                         </div>
-                        <small class="text-muted">Track, return buy things again.</small>
-                      </div>
-                </a>
-            </div>
-            <div class="col-md-4">
-                <a href="add_new_address.html" class="btn w-100">
+                       <div class="card-body m-0 pt-1">
+                       <h5 class="my-0 py-0">Srijan Sharma</h5>
+                       <p class="my-0 py-0">House No. 123</p>
+                       <p class="my-0 py-0">ABC</p>
+                       <p class="my-0 py-0">Kannpur, Uttar Pradesh123456</p>
+                       <p class="my-0 py-0">India</p>
+                       <p class="my-0 py-0">Phone Number: 123456789</p>
+                       </div>
+                       <div class="card-footer">
+                        <a href="#" class="btn btn-outline-info btn-sm p-0 m-0"><i class="fa-solid fa-2x fa-pen-to-square"></i></a>
+                        <a href="#" class="btn btn-outline-danger btn-sm p-0 m-0"><i class="fa-solid  fa-2x fa-trash"></i></a>
+                       </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4 my-md-0 my-2">
                     <div class="card">
-                        <div class="card-body">
-                          <i class="fa-solid fa-2x fa-key"></i>
-                            <span class="h4">Password change</span>
+                            <div class="card-header bg-transparent">
+                                <p class="text-muted p-0 m-0">Default: <i class="fa-brands  fa-amazon"></i></p>   
+                            </div>
+                           <div class="card-body m-0 pt-1">
+                           <h5 class="my-0 py-0">Srijan Sharma</h5>
+                           <p class="my-0 py-0">House No. 123</p>
+                           <p class="my-0 py-0">ABC</p>
+                           <p class="my-0 py-0">Kannpur, Uttar Pradesh123456</p>
+                           <p class="my-0 py-0">India</p>
+                           <p class="my-0 py-0">Phone Number: 123456789</p>
+                           </div>
+                           <div class="card-footer">
+                            <a href="#" class="btn btn-outline-info btn-sm p-0 m-0"><i class="fa-solid fa-2x fa-pen-to-square"></i></a>
+                            <a href="#" class="btn btn-outline-danger btn-sm p-0 m-0"><i class="fa-solid  fa-2x fa-trash"></i></a>
+                           </div>
                         </div>
-                        <small class="text-muted">Change your password.</small>
                       </div>
-                </a>
-            </div>
-            <div class="col-md-4">
-                <a href="your_addreses.html" class="btn w-100">
-                    <div class="card">
-                        <div class="card-body">
-                          <i class="fa-solid fa-2x fa-map-location-dot"></i>
-                            <span class="h4">Your Addresses</span>
-                        </div>
-                        <small class="text-muted">Edit addresses for orders.</small>
-                      </div>
-                </a>
-            </div>
-         </div>
-
-
-        <!-- acccont pannel end -->
-     </div>
+       </div>
+    </div>
 
 
 
