--- a/seller_new_account.html
+++ b/seller_new_account.html
@@ -17,7 +17,7 @@
      <!-- script css -->
      <link rel="stylesheet" href="/css/custom.css">
 
-    <title>Your Account</title>
+    <title>Amazon:Your Seller Account</title>
   </head>
   <body>
     <!-- navbar starts -->
@@ -126,65 +126,40 @@
     </nav>
     <!-- navbar ended -->
 
-    <!-- Your account starts here -->
-     <div class="container mt-5">
-        <h1>Your Account</h1>
-        <!-- Account pannel start -->
-         <div class="row">
-            <div class="col-md-4">
-                <a href="you_orders.html" class="btn w-100">
-                    <div class="card">
-                        <div class="card-body">
-                            <i class="fa-solid fa-2x fa-bag-shopping"></i>
-                            <span class="h4">Your Orders</span>
-                        </div>
-                        <small class="text-muted">Track, return buy things again.</small>
-                      </div>
-                </a>
+        <!-- Seller account intro -->
+         <div class="container-fluid mb-5">
+           <div class="row">
+            <div class="col-md-12 p-5 text-white text-centre" style="background-color: #008577;">
+                <h1>Since last 6 years my friend wealth increased by 3000%, thanks to selling of BSNL, LIC, AIR India & etc on Amazon</h1>
+                <p>Narendra Modi, <em>PMO India</em> (Amazon Seller)</p><br>
+                <div class="btn btn-warning rounded-pill">Start selling</div><br>
+                <p>It only takes 15 minutes to setup your account</p>
             </div>
-            <div class="col-md-4">
-                <a href="new-change_password.html" class="btn w-100">
-                    <div class="card">
-                        <div class="card-body">
-                          <i class="fa-solid fa-2x fa-key"></i>
-                            <span class="h4">Password change</span>
-                        </div>
-                        <small class="text-muted">Change your password.</small>
-                      </div>
-                </a>
-            </div>
-            <div class="col-md-4">
-                <a href="your_addreses.html" class="btn w-100">
-                    <div class="card">
-                        <div class="card-body">
-                          <i class="fa-solid fa-2x fa-map-location-dot"></i>
-                            <span class="h4">Your Addresses</span>
-                        </div>
-                        <small class="text-muted">Edit addresses for orders.</small>
-                      </div>
-                </a>
+           </div>
+
+           <div class="row">
+            <div class="col-md-12 p-5 pt-3 pl-5 pr-5 pb-3">
+                <h2>Why sell on Amazon?</h2>
             </div>
          </div>
-         <!-- Account panel start -->
-          <div class="row">
-            <div class="col-md-4">
-              <a href="seller_new_account.html" class="btn w-100">
-                <div class="card">
-                    <div class="card-body">
-                      <i class="fa-solid fa-2x fa-universal-access"></i>
-                        <span class="h4">Seller Account</span>
-                    </div>
-                    <small class="text-muted">Sell your products.</small>
-                  </div>
-            </a>
+
+         <div class="row">
+            <div class="col-md-4 p-5">
+                <img src="/img/ecommerce.webp" height="100" alt="image">
+                <h3>E-Commerce: Your next big sales channel</h3>
+                <div>Start seling on Amazon - without building a website.Register now to start selling on Amazon.in</div>
             </div>
-          </div>
-
-
-        <!-- acccont pannel end -->
-     </div>
-
-
+            <div class="col-md-4 p-5">
+                <img src="/img/customer.webp" height="100" alt="image">
+               <h3>Reach cores of Customers</h3>
+               <div>Sell to cores of engagement of customer visiting Amazon in on dekstop and through our mobile app.</div>
+            </div>
+            <div class="col-md-4 p-5">
+                <img src="/img/receive money.jpg" height="100" alt="image">
+                <h3>Receive timely payments</h3>
+                <div>Amazon ensures your payments for your delivered orders are deposited directly in your bank account every 7 days</div>
+            </div>
+         </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
