--- a/seller_new_account.html
+++ b/seller_new_account.html
@@ -132,7 +132,7 @@
             <div class="col-md-12 p-5 text-white text-centre" style="background-color: #008577;">
                 <h1>Since last 6 years my friend wealth increased by 3000%, thanks to selling of BSNL, LIC, AIR India & etc on Amazon</h1>
                 <p>Narendra Modi, <em>PMO India</em> (Amazon Seller)</p><br>
-                <div class="btn btn-warning rounded-pill">Start selling</div><br>
+                <div class="btn btn-warning rounded-pill text-center">Start selling</div><br>
                 <p>It only takes 15 minutes to setup your account</p>
             </div>
            </div>
