--- a/login.html
+++ b/login.html
@@ -149,7 +149,7 @@
                   </div>
                 </div>
                 <div class="mb-3">
-                  <label for="userPasswor" class="form-label">Password: </label>
+                  <label for="userPassword" class="form-label">Password: </label>
                   <input type="password" name="password" class="form-control" id="userPassword" placeholder="******" aria-describedby="passwordHelp" required minlength="6">
                   <small id="passwordHelp" class="form-text text-muted"><i class="fa-solid text-primary fa-info"></i> Password must be at least  6 character</small>
                   <div class="valid-feedback">
