--- a/select_payment.html
+++ b/select_payment.html
@@ -148,7 +148,7 @@
 
       <div class="d-flex flex-row text-uppercase justify-content-around" style="font-size: 15px;">
         <p>sign in</p>
-        <p class="font-weight-bold">delivery and payment</p>
+        <p class="font-weight-bold">Delivery and payment</p>
         <p class="text-muted">place order</p>
         <p class="text-muted">complete payment</p>
       </div>
